--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
                 <!--========== navbar ============-->
     <div id="header">
-    <!-- <img id="background-img" src="images/myslf.png" alt="background-img"> -->
+    <!-- <img id="background-img" src="./myslf.png" alt="background-img"> -->
 
         <div class="container">
             <nav>
-                <img src="images/logo.png" alt="logo" class="logo">
+                <img src="./logo.png" alt="logo" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/professional.png">
+                    <img src="./professional.png">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -118,7 +118,7 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/work-1.png">
+                    <img src="./work-1.png">
                     <div class="layer">
                         <h3>System Hacking</h3>
                         <p>Learn the art to break into any system! Register yourself.</p>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-2.png">
+                    <img src="./work-2.png">
                     <div class="layer">
                         <h3>System Hacking</h3>
                         <p>Learn the art to break into any system! Register yourself.</p>
@@ -134,7 +134,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-3.png">
+                    <img src="./work-3.png">
                     <div class="layer">
                         <h3>System Hacking</h3>
                         <p>Learn the art to break into any system! Register yourself.</p>
@@ -142,7 +142,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-2.png">
+                    <img src="./work-2.png">
                     <div class="layer">
                         <h3>System Hacking</h3>
                         <p>Learn the art to break into any system! Register yourself.</p>
@@ -168,7 +168,7 @@
                         <a href="https://x.com/b1x4u" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
                         <a href="https://www.linkedin.com/in/anand-kumar-5187b0213/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="images/my-resume.pdf" download class="btn btn-2">Download Resume</a>
+                    <a href="./my-resume.pdf" download class="btn btn-2">Download Resume</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
