--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="./work-1.png">
+                    <img src="./thm.png">
                     <div class="layer">
                         <h3>System Hacking</h3>
                         <p>Learn the art to break into any system! Register yourself.</p>
