--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                 <div class="work">
                     <img src="./thm.png">
                     <div class="layer">
-                        <h3>System Hacking</h3>
-                        <p>Learn the art to break into any system! Register yourself.</p>
-                        <a href="https://github.com/LegionA01" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <h3>TryHackMe</h3>
+                        <p>My user-profile</p>
+                        <a href="https://tryhackme.com/r/p/knightL3gi0n" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
