--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fa-solid fa-paper-plane"></i> contact@gmail.com</p>
-                    <p><i class="fa-solid fa-phone"></i> 0123456789</p>
+                    <p><i class="fa-solid fa-paper-plane"></i> <a href="mailto:anandkr00625@gmail.com">anandkr00625@gmail.com</a></p>
+                    <p><i class="fa-solid fa-phone"></i> +916202399507</p>
                     <div class="social-icons">
                         <a href="https://facebook.com/b1x4u" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                         <a href="https://instagram.com/b1x4u" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
