--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="container">
             <nav>
-                <img src="./logo.png" alt="logo" class="logo">
+                <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=1367653" style='border:none;'></iframe>
                 <ul id="sidemenu">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
