--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="container">
             <nav>
-                <img src="./logo.png" alt="logo" class="logo">
+<!--                 <img src="./logo.png" alt="logo" class="logo"> -->
                 <ul id="sidemenu">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -161,7 +161,7 @@
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
                     <p><i class="fa-solid fa-paper-plane"></i> <a href="mailto:anandkr00625@gmail.com">anandkr00625@gmail.com</a></p>
-                    <p><i class="fa-solid fa-phone"></i> +916202399507</p>
+<!--                     <p><i class="fa-solid fa-phone"></i> </p> -->
                     <div class="social-icons">
                         <a href="https://facebook.com/b1x4u" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                         <a href="https://instagram.com/b1x4u" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
